--- a/WebMXH/Views/Home/EditProfile.cshtml
+++ b/WebMXH/Views/Home/EditProfile.cshtml
@@ -2,6 +2,10 @@
 
 @{
     Layout = null;
+    <!--Giới tính-->
+    List<SelectListItem> gender = new List<SelectListItem>();
+    gender.Add(new SelectListItem() { Text = "Nam", Value = "Nam" });
+    gender.Add(new SelectListItem() { Text = "Nữ", Value = "Nữ" });
 }
 
 <!DOCTYPE html>
@@ -97,7 +101,7 @@
         </nav>
     </header>
     <!-- End header -->
-    @using (Html.BeginForm("EditProfile","Home",FormMethod.Post,new { enctype="Multipart/form-data" }))
+    @using (Html.BeginForm("EditProfile", "Home", FormMethod.Post, new { enctype = "Multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
         <div class="row">
@@ -212,7 +216,8 @@
                             @*@Html.LabelFor(model => model.GIOITINH, htmlAttributes: new { @class = "control-label col-md-2" })*@
                             <a style="margin-left: 16px; text-transform: uppercase; font-weight: bold; ">Giới tính</a>
                             <div class="col-md-10">
-                                @Html.EditorFor(model => model.GIOITINH, new { htmlAttributes = new { @class = "form-control" } })
+                                @*@Html.EditorFor(model => model.GIOITINH, new { htmlAttributes = new { @class = "form-control" } })*@
+                                @Html.DropDownList("GiOITINH", gender)
                                 @Html.ValidationMessageFor(model => model.GIOITINH, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -250,31 +255,6 @@
             </div>
         </div>
     }
-    @*<div class="col2" style="height: 1000px; padding-right: 25px; position: absolute; top: 20%; left: 70%;">
-        <div class="infoUser" style="position: absolute; top: 45%; right: 9%; width: 300px;">
-            <h4 style="margin-top:10px;text-align:center;font-size:2rem;">Thông tin cá nhân</h4>
-            @if (User.Identity.IsAuthenticated)
-            {
-                <div class="form-group">
-                    <i class="fas fa-phone-alt"></i>
-                    @GetSDT(int.Parse(User.Identity.Name))
-                </div>
-                <div class="form-group">
-                    <i class="fas fa-venus-mars"></i>
-                    @GetGioiTinh(int.Parse(User.Identity.Name))
-                </div>
-                <div class="form-group">
-                    <i class="fas fa-envelope"></i>
-                    @GetEmail(int.Parse(User.Identity.Name))
-                </div>
-                <div class="form-group">
-                    <i class="fas fa-birthday-cake"></i>
-                    @GetNgaySinh(int.Parse(User.Identity.Name))
-                </div>
-            }
-        </div>
-    </div>*@
-
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
